src/objects/CluesPool__c.object
<CustomObject>
    <fields>
        <fullName>AreaCues__c</fullName>
        <label>线索所属区域</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>屈光事业部</fullName>
                </value>
                <value>
                    <fullName>欧堡事业部</fullName>
                </value>
                <value>
                    <fullName>集团客户部-大型</fullName>
                </value>
                <value>
                    <fullName>集团客户部-常规</fullName>
                </value>
                <value>
                    <fullName>大客户部</fullName>
                </value>
                <value>
                    <fullName>徕卡事业部</fullName>
                </value>
                <value>
                    <fullName>KOWA&amp;HEINE事业部</fullName>
                </value>
                <value>
                    <fullName>歌德事业部</fullName>
                </value>
                <value>
                    <fullName>东北片区</fullName>
                </value>
                <value>
                    <fullName>华北片区</fullName>
                </value>
                <value>
                    <fullName>华东片区</fullName>
                </value>
                <value>
                    <fullName>华南片区</fullName>
                </value>
                <value>
                    <fullName>鲁豫片区</fullName>
                </value>
                <value>
                    <fullName>西北片区</fullName>
                </value>
                <value>
                    <fullName>西南片区</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BasicMedical__c</fullName>
        <label>基础医疗</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>市</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>县</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CueEntry__c</fullName>
        <label>线索提供者</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>已合作经销商</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailedAddress__c</fullName>
        <label>详细地址</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>职务</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntryDepartment__c</fullName>
        <label>提供者部门</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>财务部</fullName>
                </value>
                <value>
                    <fullName>常规设备事业群</fullName>
                </value>
                <value>
                    <fullName>大型设备事业群</fullName>
                </value>
                <value>
                    <fullName>国际部</fullName>
                </value>
                <value>
                    <fullName>技术部</fullName>
                </value>
                <value>
                    <fullName>经营管理部</fullName>
                </value>
                <value>
                    <fullName>晶体事业部</fullName>
                </value>
                <value>
                    <fullName>人力资源及行政部</fullName>
                </value>
                <value>
                    <fullName>市场部</fullName>
                </value>
                <value>
                    <fullName>物流部</fullName>
                </value>
                <value>
                    <fullName>香港公司</fullName>
                </value>
                <value>
                    <fullName>信息部</fullName>
                </value>
                <value>
                    <fullName>战略投资部</fullName>
                </value>
                <value>
                    <fullName>质量管理部</fullName>
                </value>
                <value>
                    <fullName>注册部</fullName>
                </value>
                <value>
                    <fullName>总裁办</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalCategory__c</fullName>
        <label>医院类别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>综合</fullName>
                </value>
                <value>
                    <fullName>专科</fullName>
                </value>
                <value>
                    <fullName>教学</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalFunction__c</fullName>
        <label>医院职能</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>眼科</fullName>
                </value>
                <value>
                    <fullName>非眼科</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalName__c</fullName>
        <label>客户名称</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalNature__c</fullName>
        <label>医院性质</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>集团客户</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailBox__c</fullName>
        <label>邮箱</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MajorDealers__c</fullName>
        <label>主要经销商</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>姓名</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewHospital__c</fullName>
        <label>新建医院</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutpatientNumbers__c</fullName>
        <label>眼科年门诊量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>线索池</relationshipLabel>
        <relationshipName>Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>省</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementDescription__c</fullName>
        <label>需求描述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>线索来源</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <label>眼科年营业额（万元）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>线索池</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CueEntry__c</columns>
        <columns>AreaCues__c</columns>
        <columns>Product__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>Group111_CluesPool</fullName>
        <filterScope>Queue</filterScope>
        <label>测试队列</label>
        <queue>Group111</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>XS{000000000}</displayFormat>
        <label>线索编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>线索池</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>